# acprouter

./: .gitignore  404.html  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pyrightconfig.json  sitemap.xml
.github/workflows/: publish.yml  test.yml
about/: index.html
api/acprouter/: index.html
cli/: index.html
docs/: cli.md  gateway.md  index.md  llms.txt  remote-acp.md  telegram.md
docs/.partials/: index-header.html
docs/about/: index.md
docs/api/: acprouter.md
docs/examples/: in-process.md  index.md  local-langchain.md  local-pydantic.md  remote-acp.md
docs/getting-started/: agent-server.md  installation.md  quickstart.md
docs/stylesheets/: tweaks.css
examples/: __main__.py  acpremote_bridge_server.py  acprouter_remote_acp.py  acprouter_with_acpkit_instance.py  index.html  langchain_acp_graph.py  pydantic_acp_agent.py  telegram_gateway.py
examples/in-process/: index.html
examples/local-langchain/: index.html
examples/local-pydantic/: index.html
examples/remote-acp/: index.html
gateway/: index.html
getting-started/agent-server/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
remote-acp/: index.html
search/: search_index.json
src/acprouter/: __init__.py  __main__.py  _version.py  projection.py  session_aliases.py  settings.py  telegram_gateway.py  terminals.py  types.py  workspace.py
telegram/: index.html
tests/: conftest.py  test_examples.py  test_gateway_helpers.py  test_projection.py  test_session_aliases.py  test_settings_main.py  test_workspace_terminals.py
