[project]
name = "acprouter"
version = "0.1.0"
description = "ACP remote control surface for Telegram etc."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache 2.0"}
authors = [{name = "Mert"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["acp", "telegram", "kurigram", "agents"]
dependencies = [
    "agent-client-protocol>=0.10.0",
    "aiohttp",
    "kurigram",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "basedpyright",
    "pytest-asyncio",
    "pytest-cov",
    "pytest",
    "ruff",
    "ty",
    "pre-commit"
]

docs = [
    "mkdocs-material",
    "mkdocstrings[python]"
]

all = ["acprouter[dev,docs]"]

[project.scripts]
acprouter = "acprouter.__main__:main"

[project.urls]
Homepage = "https://github.com/vcoderun/acprouter"
Documentation = "https://github.com/vcoderun/acprouter"
Repository = "https://github.com/vcoderun/acprouter"
Issues = "https://github.com/vcoderun/acprouter/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acprouter"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = []

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.ty]
[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
exclude = []

[tool.ty.rules]
unresolved-import = "ignore"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--color=yes",
]
markers = []
